# NLP-Engineering

./: README.md  pyproject.toml
labs/Lab_1/: M1_L1_lecture_nb_01_preprocessing.ipynb
notebooks/: notebook_1.ipynb  notebook_2.ipynb  test_notebook.ipynb
